--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>FourCode - Aprenda a codar sozinho</title>
-    <link rel="stylesheet" href="../src/styles/output.css" />
+    <link rel="stylesheet" href="./src/styles/output.css" />
   </head>
   <body>
     <section
@@ -16,7 +16,7 @@
           id="nav-items-desk"
           class="z-50 hidden h-[80px] items-center justify-between px-10 lg:flex"
         >
-          <img src="../src/assets/logo2-fourcode.png" alt="" class="h-12" />
+          <img src="./src/assets/logo2-fourcode.png" alt="" class="h-12" />
           <ul class="ml-[380px] flex gap-8">
             <li>
               <a
@@ -53,7 +53,7 @@
           class="z-50 flex h-full w-full items-center justify-between px-4 md:px-8 lg:hidden"
         >
           <img
-            src="../src/assets/croped.png"
+            src="./src/assets/croped.png"
             alt="Logo da FourCode"
             class="h-12"
           />
@@ -85,7 +85,7 @@
         class="relative z-50 flex h-auto items-center justify-center py-10 lg:py-3"
       >
         <div class="flex items-center px-10 md:gap-6 md:px-14 lg:px-20">
-          <div class="flex w-[50%] flex-col gap-4 md:ml-4 lg:gap-8">
+          <div class="flex flex-col gap-4 md:ml-4 md:w-[50%] lg:gap-8">
             <h1 class="text-4xl font-bold text-purple-100 lg:hidden">
               FourCode: Transforme sua paixão em código
             </h1>
@@ -111,11 +111,11 @@
               >Comece a programar</a
             >
           </div>
-          <div class="hidden w-[50%] items-center md:flex">
+          <div class="hidden items-center md:flex md:w-[50%]">
             <img
-              src="../src/assets/banner (1).png"
+              src="./src/assets/banner (1).png"
               alt=""
-              class="lg:w-100px w-[800px]"
+              class="hidden w-[800px] md:block"
             />
           </div>
         </div>
@@ -367,7 +367,7 @@
           class="flex flex-col items-center gap-5 md:flex-row md:gap-5 md:px-12"
         >
           <img
-            src="../src/assets/pngwing.com.png"
+            src="./src/assets/pngwing.com.png"
             alt="Imagem de icones multiplataforma"
             class="h-[140px]"
           />
@@ -385,7 +385,7 @@
           Entenda tudo que acontece por trás de um projeto real
         </h2>
         <img
-          src="../src/assets/—Pngtree—programming structure_5400822.png"
+          src="./src/assets/—Pngtree—programming structure_5400822.png"
           alt=""
           srcset=""
           class="lg:w-600px mx-auto w-[500px]"
@@ -613,7 +613,7 @@
             class="cursor-pointer"
           >
             <img
-              src="../src/assets/baixarplayst (1).png"
+              src="./src/assets/baixarplayst (1).png"
               alt="Baixar na play store"
               class="h-[60px] md:mt-[2px] md:h-[64px]"
             />
@@ -623,7 +623,7 @@
             class="cursor-pointer"
           >
             <img
-              src="../src/assets/applestore.png"
+              src="./src/assets/applestore.png"
               alt="Baixar na App store"
               class="h-[73px]"
             />
