--- a/public/index.html
+++ b/public/index.html
@@ -86,10 +86,10 @@
       >
         <div class="flex items-center px-10 md:gap-6 md:px-14 lg:px-20">
           <div class="flex flex-col gap-4 md:ml-4 md:w-[50%] lg:gap-8">
-            <h1 class="text-4xl font-bold text-purple-100 lg:hidden">
+            <h1 class="text-4xl font-bold text-white lg:hidden">
               FourCode: Transforme sua paixão em código
             </h1>
-            <h1 class="hidden text-4xl font-bold text-purple-100 lg:block">
+            <h1 class="hidden text-4xl font-bold text-white lg:block">
               Bem vindo(a) à FourCode, a plataforma que te ensina programação
             </h1>
 
