Atualizar o index.html

--- a/public/index.html
+++ b/public/index.html
@@ -635,7 +635,7 @@
       class="flex items-center justify-center border-t border-white bg-primary px-4 py-2 text-center"
     >
       <p class="font-normal text-gray-200">
-        Projeto fictício de @marcioviniciuss. Todos os direiros reservados.
+        Projeto fictício de @marcioviniciuss. Todos os direitos reservados.
       </p>
     </section>
   </body>
