Atualizar o index.html

--- a/public/index.html
+++ b/public/index.html
@@ -234,7 +234,7 @@
       </svg>
     </section>
 
-    <section class="relative mb-5 h-auto w-full bg-gray-100">
+    <section class="relative h-auto w-full bg-gray-100">
       <div class="custom-shape-divider-top-1734008825">
         <svg
           data-name="Layer 1"
